fix http.candidato swag, create http.vaga swag docs
